frontend/test/should_pass/induced_001.grg
induced rule r {
	pattern {
	}
	replace {
	}
}

