frontend/test/should_fail/exact_002.grg
exact exact rule r {

	replace {
	}
}

